Thu Aug 20 20:08:15 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktext.c ([un]draw_cursor): Check to see if we've
	computed our geometry yet, and if not, ignore the request.

	  gtk/gtktext.c (correct_cache_insert): Fiddled around]
	some more. All the bug-test codes seem to work at once
	now. (fingers crossed...)

Thu Aug 20 13:04:08 PDT 1998 Manish Singh <yosh@gimp.org>

	* gdk/gdkrgb.c: silly visual fixes

	* gtk/testgtk.c: call gdk_rgb_init so color preview test actually
	works

1998-08-20  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gtk/gtkhandlebox.c (gtk_handle_box_button_changed): Do not do
	anything if the event's window is not the bin window.
	(gtk_handle_box_motion): Likewise.

1998-08-19  Raph Levien  <raph@gimp.org>

	* gtk/testgtk.c (create_color_preview): pushed the colormap and
	visual so it would work better with GdkRgb.

1998-08-19  Raph Levien  <raph@gimp.org>

	* gdk/gdkrgb.c: fixed some bugs in the 565_d mode, and added a
	4bpp static_color mode (for vga displays). Also fixed a '64' value
	in the dither matrix, which was causing one pixel out of 16k to be
	dithered wrong.

	* gtk/gtkpreview.{c,h}: Changed it to work with GdkRgb, gutting
	most of the contents. This is an API change - any apps that relied
	on the internal structure of GtkPreview will need some change -
	most notably in the use of reserved colors. The Gimp needed
	changes in this regard.

Wed Aug 19 00:11:14 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_init): allow argument parsing in gtk without
	G_ENABLE_DEBUG being defined (specifically --gtk-module= and
	--g-fatal-warnings), noticed by miguel.

Tue Aug 18 17:54:40 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkrc.c (gtk_rc_parse_file): use g_get_current_dir() instead of
	getcwd().

 	* gdk/gdkprivate.h:
	* gdk/gdkglobals.c:
 	* gdk/gdkwindow.c:
	* gdk/gdk.c:
	* gtk/gtkwindow.c: 
	* gtk/gtkitemfactory.c: 
	dropped gdk_progname, use g_get_prgname()/g_set_prgname() instead.

	* gtk/gtkselection.c: